syntax = "proto3";

option java_package = "ru.spbau.mit.core.proto";
option java_outer_classname = "SortingProtos";

message SortingMessage {
    repeated fixed32 elements = 2;
}